@@ -43,7 +43,7 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QComboBox" name="tags">
+        <widget class="CompletionComboBox" name="tags">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -115,6 +115,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>CompletionComboBox</class>
+   <extends>QComboBox</extends>
+   <header>completion_combo_box.h</header>
+  </customwidget>
+ </customwidgets> 
  <resources>
   <include location="mnemosyne.qrc"/>
  </resources>
